--- a/index.html
+++ b/index.html
@@ -11,11 +11,53 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <!--  <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">PTA</a></li>
+                <div class="dropdown">
+                    <ul class="dropdownitem">
+                        <li><a href="">PTA</a></li>
+                    </ul>
+                </div>
                 <li><a href="">Parents</a></li>
                 <li><a href="">School Information</a></li>
+            </ul> -->
+
+            <ul>
+                <div class="navbar">
+                    <a href="index.html"><li>Home</li></a>
+                    <div class="dropdown">
+                        <button class="dropbtn">Parents</button>
+                        <div class="dropdown-content">
+                            <a href="#">Art Volunteers</a>
+                            <a href="#">Reinbursement Form</a>
+                            <a href="#">School T-Shirt</a> 
+                            <a href="#">Skyward</a> 
+                            <a href="#">Teacher Supplies</a> 
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">School Information</button>
+                        <div class="dropdown-content">
+                            <a href="#">A.L.L Program</a>
+                            <a href="#">ASD Preschool</a>
+                            <a href="#">Calendar</a>
+                            <a href="#">Foothill Website</a>
+                            <a href="#">Lunch Schedule & Menu</a>
+                            <a href="#">Programs</a>
+                            <a href="#">Weekly Class Schedule</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">PTA</button>
+                        <div class="dropdown-content">
+                            <a href="#">Fall Festival</a>
+                            <a href="#">Gift Card Fundraiser</a>
+                            <a href="#">Meeting Minutes</a>
+                            <a href="#">Monthly Newsletters</a>
+                            <a href="#">PTA Board</a>
+                        </div>
+                    </div>
+                </div>
             </ul>
         </nav>
         <img src="images/FoothillPage.png" alt="Foothhill PTA Banner">
