--- a/index.html
+++ b/index.html
@@ -11,37 +11,26 @@
 <body>
     <header>
         <nav>
-            <!--  <ul>
-                <li><a href="index.html">Home</a></li>
-                <div class="dropdown">
-                    <ul class="dropdownitem">
-                        <li><a href="">PTA</a></li>
-                    </ul>
-                </div>
-                <li><a href="">Parents</a></li>
-                <li><a href="">School Information</a></li>
-            </ul> -->
-
             <ul>
                 <div class="navbar">
                     <a href="index.html"><li>Home</li></a>
                     <div class="dropdown">
                         <button class="dropbtn">Parents</button>
                         <div class="dropdown-content">
-                            <a href="#">Art Volunteers</a>
+                            <a href="http://foothillarts.blogspot.com/">Art Volunteers</a>
                             <a href="#">Reinbursement Form</a>
                             <a href="#">School T-Shirt</a> 
-                            <a href="#">Skyward</a> 
+                            <a href="https://skyward.alpinedistrict.org/scripts/wsisa.dll/WService=wsEAplus/seplog01">Skyward</a> 
                             <a href="#">Teacher Supplies</a> 
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">School Information</button>
                         <div class="dropdown-content">
-                            <a href="#">A.L.L Program</a>
+                            <a href="https://docs.google.com/presentation/d/1BDIBbp7APpMXf--TQGE4OdTnxuAIPxzrZ3he7r1AEuI/edit#slide=id.p6">A.L.L Program</a>
                             <a href="#">ASD Preschool</a>
                             <a href="#">Calendar</a>
-                            <a href="#">Foothill Website</a>
+                            <a href="https://foothill.alpineschools.org">Foothill Website</a>
                             <a href="#">Lunch Schedule & Menu</a>
                             <a href="#">Programs</a>
                             <a href="#">Weekly Class Schedule</a>
@@ -51,7 +40,7 @@
                         <button class="dropbtn">PTA</button>
                         <div class="dropdown-content">
                             <a href="#">Fall Festival</a>
-                            <a href="#">Gift Card Fundraiser</a>
+                            <a href="https://docs.google.com/document/d/1-Sj5_EJnHV6nQ9l7ivqiB-Ycb2Cr8pkOEsPQkj-Ism4/edit">Gift Card Fundraiser</a>
                             <a href="#">Meeting Minutes</a>
                             <a href="#">Monthly Newsletters</a>
                             <a href="#">PTA Board</a>
