--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </ul>
         </nav>
-        <img src="images/FoothillPage.png" alt="Foothhill PTA Banner">
+        <img class="headerimg" src="images/FoothillPage.png" alt="Foothhill PTA Banner">
     </header>
     <main>
         <div>
@@ -72,7 +72,7 @@
                     <p>Add your PTA volunteers hours below. We recommend you enter your hours at the end of each month.</p>
                     <label for="name">Name:</label><input type="text"><br>
                     <label for="email">Email:</label><input type="text"><br>
-                    <label for="date">Date:</label><input type="text"><br>
+                    <label for="date">Date:</label><input type="date"><br>
                     <label for="hours">Hours:</label><input type="text"><br>
                 </div>
                 <div class="volunteerbutton">
@@ -87,7 +87,7 @@
                     <p>Sends us any questions or concerns and we will get back to you as soon as possible.</p>
                     <label for="name">Name:</label><input type="text"><br>
                     <label for="email">Email:</label><input type="text"><br>
-                    <label for="comment">Comment:</label><input style="height:150px;" .....><br>
+                    <label for="comment">Comment:</label><textarea name="message" rows="5" cols="77">Enter your comment...</textarea><br>
                 </div>
                 <div class="contactbutton">
                     <input type="submit"> 
@@ -114,8 +114,8 @@
             <div class="social">
                 <h3>Follow Us for Quick Updates</h3>
                 <div class="sociallinks">
-                    <a href="https://www.facebook.com/FoothillPTA/"><img src="images/facebook.png" alt="PTA Facebook"></a>
-                    <a href="http://instagram.com/oremfoothillpta"><img src="images/instagram.png" alt="PTA Instagram"></a>
+                    <a href="https://www.facebook.com/FoothillPTA/" target="_blank"><img src="images/facebook.png" alt="PTA Facebook"></a>
+                    <a href="http://instagram.com/oremfoothillpta" target="_blank"><img src="images/instagram.png" alt="PTA Instagram"></a>
                 </div>
             </div>
         </div>
