--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <label for="name">Name:</label><input type="text"><br>
                     <label for="email">Email:</label><input type="text"><br>
                     <label for="date">Date:</label><input type="date"><br>
-                    <label for="hours">Hours:</label><input type="text"><br>
+                    <label for="hours">Hours:</label><input type="number"><br>
                 </div>
                 <div class="volunteerbutton">
                     <input type="submit" class="volunteerbutton"> 
